--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>hello</h1>
         <p>Return to the homepage</p>
-        <a href="./home.html"><h2>return to the home page</h2></a>
+        <a href="./index.html"><h2>return to the home page</h2></a>
     </div>
 </body>
 </html>
