Added Google link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h1>hello</h1>
         <p>Hi there</p>
         <a href="./about.html"><h2>come to the about page</h2></a>
+        <a href="https://google.com"><h2>go to google</h2></a>
     </div>
 </body>
 </html>
