Added Twitter Share

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <title>Home Page</title>
 </head>
 <body>
 
@@ -28,6 +31,9 @@
         <p>Hi there</p>
         <a href="./about.html"><h2>come to the about page</h2></a>
         <a href="https://google.com"><h2>go to google</h2></a>
+        <a class="twitter-share-button" target="_blank"
+            href="https://twitter.com/intent/tweet?text=Hi">
+            <i></i><span>Tweet</span></a> 
     </div>
 </body>
 </html>
